...
    <string name="app_name">DJ Live</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- BUTTON TEXT : UserSetupActivity -->
    <string name="join_a_playlist">Join A Playlist</string>
    <string name="host_a_playlist">Host A Playlist</string>


    <!-- BUTTON TEXT : PlaylistSetupActivity -->
    <string name="create">Create</string>
    <string name="back">Back</string>
...
