...

        <EditTextPreference
            android:title="Pin"
            android:textColor="@color/colorDarkPrimary"
            android:summary="Pin the guests must enter to connect"
            android:key="@string/pin"
            android:defaultValue="123456"
            android:inputType="number|none"
            android:maxLength="6"
            android:digits="0123456789"
            android:selectAllOnFocus="true"/>

        <SwitchPreference
...
