package com.djlive.djlive;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class LogInInfoGuestTest {

    @Rule
    public ActivityTestRule<SplashScreenActivity> mActivityTestRule = new ActivityTestRule<>(SplashScreenActivity.class);

    @Test
    public void logInInfoGuestTest() {
        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.btnJoin), withText("Join A Playlist"),
                        withParent(allOf(withId(R.id.activity_user_setup),
                                withParent(withId(android.R.id.content)))),
                        isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.etHostName), isDisplayed()));
        appCompatEditText.perform(replaceText("summerwilken"), closeSoftKeyboard());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.etPasscode), isDisplayed()));
        appCompatEditText2.perform(replaceText("123456"), closeSoftKeyboard());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.etGuestUsername), isDisplayed()));
        appCompatEditText3.perform(replaceText("johnny depp"), closeSoftKeyboard());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.etGuestUsername), withText("johnny depp"), isDisplayed()));
        appCompatEditText4.perform(click());

        ViewInteraction editText = onView(
                allOf(withId(R.id.etHostName), withText("summerwilken"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.tilHostName),
                                        0),
                                0),
                        isDisplayed()));
        editText.check(matches(withText("summerwilken")));

        ViewInteraction editText2 = onView(
                allOf(withId(R.id.etPasscode), withText("123456"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.tilPasscode),
                                        0),
                                0),
                        isDisplayed()));
        editText2.check(matches(withText("123456")));

        ViewInteraction editText3 = onView(
                allOf(withId(R.id.etGuestUsername), withText("johnny depp"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.tilGuestUsername),
                                        0),
                                0),
                        isDisplayed()));
        editText3.check(matches(withText("johnny depp")));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
